Refactor ZHA blueprints to use MQTT triggers and improve action handling
- Updated Aqara Magic Cube blueprint to use MQTT for event triggers.
- Refactored IKEA Tradfri and Philips Hue dimmer switch blueprints to replace ZHA event triggers with MQTT topics for various actions.
- Enhanced action handling logic to better interpret commands and manage state.
- Changed device integration from ZHA to Zigbee2MQTT for consistency across blueprints.

--- a/ZHA IKEA Tradfri on-off Switch (Scene Preset).yaml
+++ b/ZHA IKEA Tradfri on-off Switch (Scene Preset).yaml
@@ -8,7 +8,8 @@ blueprint:
       description: The dimmer switch to use
       selector:
         device:
-          integration: zha
+          integration: zigbee2mqtt
+          manufacturer: IKEA
           model: TRADFRI on/off switch
           multiple: false
     light:
@@ -172,13 +173,27 @@ blueprint:
 mode: restart
 max_exceeded: silent
 trigger:
-  - platform: event
-    event_type: zha_event
-    event_data:
-      device_id: !input dimmer_switch
+  - platform: mqtt
+    topic: zigbee2mqtt/+/action
+    payload: "on"
+  - platform: mqtt
+    topic: zigbee2mqtt/+/action
+    payload: "off"
+  - platform: mqtt
+    topic: zigbee2mqtt/+/action
+    payload: "brightness_move_up"
+  - platform: mqtt
+    topic: zigbee2mqtt/+/action
+    payload: "brightness_move_down"
 action:
   - variables:
-      command: "{{ trigger.event.data.command }}"
+      command: >
+        {% set cmd = trigger.payload %}
+        {% if cmd == 'on' %}on
+        {% elif cmd == 'off' %}off
+        {% elif cmd == 'brightness_move_up' %}move_with_on_off
+        {% elif cmd == 'brightness_move_down' %}move
+        {% else %}unknown{% endif %}
       included_scenes: !input included_scenes
       scene_helper: !input scene_helper
       reset_after: !input reset_after
