--- a/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
+++ b/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
@@ -9,7 +9,8 @@ blueprint:
       description: The dimmer switch to use
       selector:
         device:
-          integration: zha
+          integration: zigbee2mqtt
+          manufacturer: Philips
           model: RWL022
           multiple: false
     light:
@@ -238,13 +239,45 @@ blueprint:
 mode: queued
 max_exceeded: silent
 trigger:
-  - platform: event
-    event_type: zha_event
-    event_data:
-      device_id: !input dimmer_switch
+  - platform: mqtt
+    topic: zigbee2mqtt/+/action
+    payload: "on"
+    id: on_press
+  - platform: mqtt
+    topic: zigbee2mqtt/+/action
+    payload: "on_double"
+    id: on_double_press
+  - platform: mqtt
+    topic: zigbee2mqtt/+/action
+    payload: "up_press"
+    id: up_press
+  - platform: mqtt
+    topic: zigbee2mqtt/+/action
+    payload: "up_hold"
+    id: up_hold
+  - platform: mqtt
+    topic: zigbee2mqtt/+/action
+    payload: "up_double"
+    id: up_double_press
+  - platform: mqtt
+    topic: zigbee2mqtt/+/action
+    payload: "down_press"
+    id: down_press
+  - platform: mqtt
+    topic: zigbee2mqtt/+/action
+    payload: "down_hold"
+    id: down_hold
+  - platform: mqtt
+    topic: zigbee2mqtt/+/action
+    payload: "down_double"
+    id: down_double_press
+  - platform: mqtt
+    topic: zigbee2mqtt/+/action
+    payload: "off_press"
+    id: off_press
 action:
   - variables:
-      command: "{{ trigger.event.data.command if trigger.event is defined else 'tv_on' }}"
+      command: "{{ trigger.id if trigger is defined else 'tv_on' }}"
       included_scenes: !input included_scenes
       scene_helper: !input scene_helper
       reset_after: !input reset_after
