--- a/Aqara-Magic-Cube-ZHA-(51-actions).yaml
+++ b/Aqara-Magic-Cube-ZHA-(51-actions).yaml
@@ -198,24 +198,37 @@ blueprint:
 mode: restart
 max_exceeded: silent
 trigger:
-  - platform: event
-    event_type: zha_event
-    event_data:
-      device_id: !input cube
+  - platform: mqtt
+    topic: zigbee2mqtt/+/action
+    device_id: !input cube
+
 action:
   - variables:
-      command: "{{ trigger.event.data.command }}"
-      value: "{{ trigger.event.data.args.value | default(0) }}"
-      flip_degrees: "{{ trigger.event.data.args.flip_degrees | default(0) }}"
-      relative_degrees: "{{ trigger.event.data.args.relative_degrees | default(0) }}"
+      raw_action: "{{ trigger.payload_json.action }}"
+      command: |-
+        {% set actions = {
+          'flip': 'flip',
+          'tap': 'knock',
+          'rotate_left': 'rotate_left',
+          'rotate_right': 'rotate_right',
+          'slide': 'slide'
+        } %}
+        {% set action_parts = raw_action.split('_') %}
+        {% if action_parts[0] in actions %}
+          {{ actions[action_parts[0]] }}
+        {% else %}
+          {{ raw_action }}
+        {% endif %}
+      activated_face: |-
+        {% set action_parts = raw_action.split('_') %}
+        {% if raw_action.startswith('flip') %}
+          {{ action_parts[-1] }}
+        {% elif raw_action.startswith('tap') or raw_action.startswith('slide') %}
+          {{ action_parts[1] }}
+        {% else %}
+          {{ states(temp_last_face_input) | int(0) }}
+        {% endif %}
       temp_last_face_input: !input last_face_input
-      activated_face: "{{ iif((command == 'slide' or command == 'knock' or command == 'flip'), trigger.event.data.args.activated_face, states(temp_last_face_input)) | int(0) }}"
-      #activated_face: |-
-      #{% if command == 'slide' or command == 'knock' or command == 'flip' %}
-      #{{ trigger.event.data.args.activated_face | int(0) }}
-      #{% else %}
-      #{{ states(temp_last_face_input) | int(0) }}
-      #{% endif %}
   - service: input_number.set_value
     target:
       entity_id: !input last_face_input
