Update Philips Hue Dimmer Switch blueprints to version 2.0.0, transitioning from ZHA to MQTT integration. Refined action handling by updating payloads and conditions for button presses, including new hold and release actions. Consistent model naming across blueprints for clarity.

--- a/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
+++ b/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: "Zigbee2MQTT Philips Hue Dimmer Switch (RWL022) (Scene Preset). Version: 1.7.0"
+  name: "Zigbee2MQTT Philips Hue Dimmer Switch (RWL022) (Scene Preset). Version: 2.0.0"
   description: >
     Control lights with a Philips Hue Dimmer Switch. Scene Preset integration is required https://github.com/Hypfer/hass-scene_presets
   domain: automation
@@ -9,9 +9,9 @@ blueprint:
       description: The dimmer switch to use
       selector:
         device:
-          integration: zigbee2mqtt
+          integration: mqtt
           manufacturer: Philips
-          model: RWL022
+          model: Hue dimmer switch*
           multiple: false
     light:
       name: Lights
@@ -241,40 +241,52 @@ max_exceeded: silent
 trigger:
   - platform: mqtt
     topic: zigbee2mqtt/+/action
-    payload: "on"
+    payload: "on-press"
     id: on_press
   - platform: mqtt
     topic: zigbee2mqtt/+/action
-    payload: "on_double"
-    id: on_double_press
+    payload: "on-hold"
+    id: on_hold
   - platform: mqtt
     topic: zigbee2mqtt/+/action
-    payload: "up_press"
+    payload: "on-hold-release"
+    id: on_hold_release
+  - platform: mqtt
+    topic: zigbee2mqtt/+/action
+    payload: "up-press"
     id: up_press
   - platform: mqtt
     topic: zigbee2mqtt/+/action
-    payload: "up_hold"
+    payload: "up-hold"
     id: up_hold
   - platform: mqtt
     topic: zigbee2mqtt/+/action
-    payload: "up_double"
-    id: up_double_press
+    payload: "up-hold-release"
+    id: up_hold_release
   - platform: mqtt
     topic: zigbee2mqtt/+/action
-    payload: "down_press"
+    payload: "down-press"
     id: down_press
   - platform: mqtt
     topic: zigbee2mqtt/+/action
-    payload: "down_hold"
+    payload: "down-hold"
     id: down_hold
   - platform: mqtt
     topic: zigbee2mqtt/+/action
-    payload: "down_double"
-    id: down_double_press
+    payload: "down-hold-release"
+    id: down_hold_release
   - platform: mqtt
     topic: zigbee2mqtt/+/action
-    payload: "off_press"
+    payload: "off-press"
     id: off_press
+  - platform: mqtt
+    topic: zigbee2mqtt/+/action
+    payload: "off-hold"
+    id: off_hold
+  - platform: mqtt
+    topic: zigbee2mqtt/+/action
+    payload: "off-hold-release"
+    id: off_hold_release
 action:
   - variables:
       command: "{{ trigger.id if trigger is defined else 'tv_on' }}"
@@ -372,7 +384,7 @@ action:
                       targets:
                         entity_id: "{{ target_lights }}"
       - conditions:
-          - "{{ command == 'on_double_press' }}"
+          - "{{ command == 'on_hold' }}"
         sequence:
           - service: scene_presets.stop_dynamic_scenes_for_targets
             data:
@@ -421,7 +433,7 @@ action:
                     data:
                       brightness_pct: 100
                       transition: !input transition_time
-      - conditions: "{{ command == 'up_double_press' }}"
+      - conditions: "{{ command == 'up_hold_release' }}"
         sequence:
           - service: light.turn_on
             target:
@@ -455,7 +467,7 @@ action:
                     data:
                       brightness_pct: 1
                       transition: !input transition_time
-      - conditions: "{{ command == 'down_double_press' }}"
+      - conditions: "{{ command == 'down_hold_release' }}"
         sequence:
           - service: light.turn_on
             target:
