--- a/ZHA Philips Hue Dimmer Switch V1 (RWL020).yaml
+++ b/ZHA Philips Hue Dimmer Switch V1 (RWL020).yaml
@@ -9,8 +9,7 @@ blueprint:
       selector:
         device:
           integration: mqtt
-          manufacturer: Philips
-          model: Hue dimmer switch*
+          model: 324131092621
           multiple: false
     aux_scene_on:
       name: ON Button Aux Scene
