Refactor Philips Hue Dimmer Switch blueprints to standardize model definitions. Updated model fields to use lists for better compatibility with MQTT integration across multiple versions (RWL020, RWL022). This change enhances consistency and clarity in device configuration.

--- a/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
+++ b/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
@@ -10,7 +10,8 @@ blueprint:
       selector:
         device:
           integration: mqtt
-          model: 929002398602
+          model:
+            - 324131092621
           multiple: false
     light:
       name: Lights
