--- a/ZHA Philips Hue Dimmer Switch V1 (RWL020).yaml
+++ b/ZHA Philips Hue Dimmer Switch V1 (RWL020).yaml
@@ -9,7 +9,8 @@ blueprint:
       selector:
         device:
           integration: mqtt
-          model: 324131092621
+          model:
+            - 324131092621
           multiple: false
     aux_scene_on:
       name: ON Button Aux Scene
