--- a/ZHA Philips Hue Dimmer Switch V2 (RWL022).yaml
+++ b/ZHA Philips Hue Dimmer Switch V2 (RWL022).yaml
@@ -9,7 +9,8 @@ blueprint:
       selector:
         device:
           integration: mqtt
-          model: 929002398602
+          model:
+            - 929002398602
           multiple: false
     main_scene:
       name: Main Scene
