Update Philips Hue Dimmer Switch blueprint to standardize model definition format. Changed model identifier to a string format for improved compatibility with MQTT integration. This change enhances clarity in device configuration.

--- a/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
+++ b/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
@@ -10,8 +10,7 @@ blueprint:
       selector:
         device:
           integration: mqtt
-          model:
-            - 324131092621
+          model: "324131092621"
           multiple: false
     light:
       name: Lights
