Refactor Philips Hue Dimmer Switch blueprints to standardize manufacturer and model definitions. Updated model identifiers to string format for improved clarity and compatibility with MQTT integration. Adjusted action payloads to use hyphens for button press events, enhancing consistency across multiple versions (RWL020, RWL022, RWL022). This change improves device configuration and action handling logic.

--- a/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
+++ b/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
@@ -10,7 +10,8 @@ blueprint:
       selector:
         device:
           integration: mqtt
-          model: "324131092621"
+          manufacturer: Philips
+          model: "Hue dimmer switch (929002398602)"
           multiple: false
     light:
       name: Lights
@@ -239,8 +240,8 @@ mode: queued
 max_exceeded: silent
 trigger:
   - platform: mqtt
-    topic: zigbee2mqtt/+/action
-    payload: "on_press"
+    topic: "zigbee2mqtt/+/action"
+    payload: "on-press"
     id: on_press
   - platform: mqtt
     topic: zigbee2mqtt/+/action
