--- a/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
+++ b/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: "Zigbee2MQTT Philips Hue Dimmer Switch (RWL022) (Scene Preset). Version: 2.0.5"
+  name: "Zigbee2MQTT Philips Hue Dimmer Switch (RWL022) (Scene Preset). Version: 2.0.6"
   description: >
     Control lights with a Philips Hue Dimmer Switch. Scene Preset integration is required https://github.com/Hypfer/hass-scene_presets
   domain: automation
@@ -240,15 +240,21 @@ mode: queued
 max_exceeded: silent
 trigger:
   - platform: mqtt
-    topic: "zigbee2mqtt/Bedroom Karyn's Night Dimmer"
-    id: "on_press"
-    value_template: "{{ value_json.action }}"
+    topic: "zigbee2mqtt/+/action"
     payload: "on_press"
+    id: on_press
   - platform: mqtt
-    topic: "zigbee2mqtt/Bedroom Karyn's Night Dimmer"
-    id: "on_hold"
-    value_template: "{{ value_json.action }}"
+    topic: zigbee2mqtt/+/action
     payload: "on_hold"
+    id: on_hold
+  - platform: mqtt
+    topic: zigbee2mqtt/+/action
+    payload: "on_press_release"
+    id: on_press_release
+  - platform: mqtt
+    topic: zigbee2mqtt/+/action
+    payload: "on_hold_release"
+    id: on_hold_release
   - platform: mqtt
     topic: zigbee2mqtt/+/action
     payload: "up_press"
