--- a/ZHA Philips Hue Dimmer Switch V1 (RWL020).yaml
+++ b/ZHA Philips Hue Dimmer Switch V1 (RWL020).yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: Zigbee2MQTT Philips Hue Dimmer Switch (RWL020) v.2.5.1
+  name: ZHA Philips Hue Dimmer Switch (RWL020)
   description: Control lights with a Philips Hue Dimmer Switch
   domain: automation
   input:
@@ -57,7 +57,7 @@ blueprint:
       selector:
         entity:
           domain:
-            - input_text
+            - input_number
           multiple: false
 
     transition_time:
@@ -93,66 +93,20 @@ blueprint:
           step: 1
           unit_of_measurement: s
 
-mode: queued
+mode: restart
 max_exceeded: silent
 trigger:
-  - platform: mqtt
-    topic: zigbee2mqtt/+/action
-    payload: "on"
-    id: on_press
-  - platform: mqtt
-    topic: zigbee2mqtt/+/action
-    payload: "on_double"
-    id: on_double_press
-  - platform: mqtt
-    topic: zigbee2mqtt/+/action
-    payload: "up_press"
-    id: up_press
-  - platform: mqtt
-    topic: zigbee2mqtt/+/action
-    payload: "up_hold"
-    id: up_hold
-  - platform: mqtt
-    topic: zigbee2mqtt/+/action
-    payload: "up_double"
-    id: up_double_press
-  - platform: mqtt
-    topic: zigbee2mqtt/+/action
-    payload: "down_press"
-    id: down_press
-  - platform: mqtt
-    topic: zigbee2mqtt/+/action
-    payload: "down_hold"
-    id: down_hold
-  - platform: mqtt
-    topic: zigbee2mqtt/+/action
-    payload: "down_double"
-    id: down_double_press
-  - platform: mqtt
-    topic: zigbee2mqtt/+/action
-    payload: "off_press"
-    id: off_press
-  - platform: mqtt
-    topic: zigbee2mqtt/+/action
-    payload: "off_double"
-    id: off_double_press
+  - platform: event
+    event_type: zha_event
+    event_data:
+      device_id: !input dimmer_switch
 action:
   - variables:
-      command: "{{ trigger.id if trigger is defined else 'none' }}"
+      command: "{{ trigger.event.data.command }}"
       included_scenes: !input included_scenes
       scene_helper: !input scene_helper
       reset_after: !input reset_after
-      active_scene: >
-        {% set data = states(scene_helper) %}
-        {% if data != "unknown" %}
-          {% if (as_timestamp(now()) - (data | from_json).timestamp) < reset_after %}
-            {{ (data | from_json).scene }}
-          {% else %}
-          0
-          {% endif %}
-        {% else %}
-          0
-        {% endif %}
+      active_scene: "{{ iif(states(scene_helper) | int(0) >= included_scenes | count, 0, states(scene_helper)) | int(0) }}"
       target_lights: !input light
       hold_press_change: !input hold_press_change
 
@@ -164,12 +118,11 @@ action:
               transition: !input transition_time
               entity_id: >
                 {{ included_scenes[active_scene] }}
-          - service: input_text.set_value
+          - service: input_number.set_value
             target:
               entity_id: !input scene_helper
             data:
-              value: >
-                {{ {"scene": (active_scene + 1) % included_scenes | length, "timestamp": as_timestamp(now())} | to_json }}
+              value: "{{ active_scene + 1}}"
 
       - conditions: "{{ command == 'on_double_press' }}"
         sequence:
@@ -181,23 +134,27 @@ action:
           - "{{ command == 'up_hold' or command == 'up_press'}}"
         sequence:
           - choose:
-              - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'lt', 255 - hold_press_change) | list | length > 0 }}"
+              - conditions:
+                  "{{ (state_attr(target_lights, 'brightness') + ((hold_press_change/100)*254)
+                  | round)  <= 255 }}"
                 sequence:
                   - service: light.turn_on
                     target:
                       entity_id:
-                        "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
-                        | map(attribute='entity_id') | list }}"
+                        "{{ expand(target_lights) | selectattr('state', 'eq',
+                        'on') | map(attribute='entity_id') | list }}"
                     data:
                       brightness_step_pct: "{{ hold_press_change }}"
                       transition: !input transition_time
-              - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'gte', 255 - hold_press_change) | list | length > 0 }}"
+              - conditions:
+                  "{{ (state_attr(target_lights, 'brightness') + ((hold_press_change/100)*254)
+                  | round)  > 255 }}"
                 sequence:
                   - service: light.turn_on
                     target:
                       entity_id:
-                        "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
-                        | map(attribute='entity_id') | list }}"
+                        "{{ expand(target_lights) | selectattr('state', 'eq',
+                        'on') | map(attribute='entity_id') | list }}"
                     data:
                       brightness_pct: 100
                       transition: !input transition_time
@@ -217,23 +174,29 @@ action:
           - "{{ command == 'down_hold' or command == 'down_press' }}"
         sequence:
           - choose:
-              - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'gt', hold_press_change) | list | length > 0 }}"
+              - conditions:
+                  "{{ (state_attr(target_lights, 'brightness') - ((hold_press_change/100)*254)
+                  | round)  >= hold_press_change }}"
                 sequence:
                   - service: light.turn_on
                     target:
                       entity_id:
-                        "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
-                        | map(attribute='entity_id') | list }}"
+                        "{{ expand(target_lights) | selectattr('state', 'eq',
+                        'on') | map(attribute='entity_id') | list }}"
                     data:
                       brightness_step_pct: "{{ -hold_press_change }}"
                       transition: !input transition_time
-              - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'lte', hold_press_change) | list | length > 0 }}"
+
+              - conditions:
+                  "{{ (state_attr(target_lights, 'brightness') - ((hold_press_change/100)*254)
+                  | round)  < hold_press_change or (state_attr(target_lights, 'brightness') - ((hold_press_change/100)*254)
+                  | round)  >= 1}}"
                 sequence:
                   - service: light.turn_on
                     target:
                       entity_id:
-                        "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
-                        | map(attribute='entity_id') | list }}"
+                        "{{ expand(target_lights) | selectattr('state', 'eq',
+                        'on') | map(attribute='entity_id') | list }}"
                     data:
                       brightness_pct: 1
                       transition: !input transition_time
@@ -260,3 +223,14 @@ action:
           - service: scene.turn_on
             target:
               entity_id: !input aux_scene_off
+
+  - delay:
+      hours: 0
+      minutes: 0
+      seconds: !input reset_after
+      milliseconds: 0
+  - service: input_number.set_value
+    target:
+      entity_id: !input scene_helper
+    data:
+      value: 0
