--- a/ZHA Philips Hue Dimmer Switch V1 (RWL020).yaml
+++ b/ZHA Philips Hue Dimmer Switch V1 (RWL020).yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: ZHA Philips Hue Dimmer Switch (RWL020)
+  name: MQTT Philips Hue Dimmer Switch (RWL020) v2.1.0
   description: Control lights with a Philips Hue Dimmer Switch
   domain: automation
   input:
