Update MQTT Philips Hue Dimmer Switch blueprint to version 2.1.1. Changed the trigger from ZHA event to MQTT for improved integration with Zigbee2MQTT. This update enhances action handling by utilizing the device's name in the MQTT topic, streamlining automation logic and improving overall functionality.

--- a/ZHA Philips Hue Dimmer Switch V1 (RWL020).yaml
+++ b/ZHA Philips Hue Dimmer Switch V1 (RWL020).yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: MQTT Philips Hue Dimmer Switch (RWL020) v2.1.0
+  name: MQTT Philips Hue Dimmer Switch (RWL020) v2.1.1
   description: Control lights with a Philips Hue Dimmer Switch
   domain: automation
   input:
@@ -96,10 +96,8 @@ blueprint:
 mode: restart
 max_exceeded: silent
 trigger:
-  - platform: event
-    event_type: zha_event
-    event_data:
-      device_id: !input dimmer_switch
+  - platform: mqtt
+    topic: "zigbee2mqtt/{{ device_attr(dimmer_switch, 'name') }}/action"
 action:
   - variables:
       command: "{{ trigger.event.data.command }}"
