Update MQTT Philips Hue Dimmer Switch blueprint to version 2.1.8. Modified the MQTT trigger topic to utilize the device's name for improved integration with Zigbee2MQTT, enhancing automation logic and action handling. This update continues to optimize the functionality of the Philips Hue Dimmer Switch.

--- a/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
+++ b/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: "MQTT Philips Hue Dimmer Switch (Scene Preset). Version: 2.1.7"
+  name: "MQTT Philips Hue Dimmer Switch (Scene Preset). Version: 2.1.8"
   description: >
     Control lights with a Philips Hue Dimmer Switch. Scene Preset integration is required https://github.com/Hypfer/hass-scene_presets
   domain: automation
@@ -240,7 +240,7 @@ mode: queued
 max_exceeded: silent
 trigger:
   - platform: mqtt
-    topic: "zigbee2mqtt/+/action"
+    topic: "zigbee2mqtt/{{ device_attr(dimmer_switch, 'name') }}/action"
 action:
   - variables:
       command: "{{ trigger.payload }}"
